--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,9 +10,9 @@ jobs:
 
   steps: 
   - name: Checkout code
-    uses: actions / checkout@v5
+    uses: actions/checkout@v5
   - name: SetUp Node
-    uses: action/setup-node@v3  
+    uses: actions/setup-node@v3  
     with: 
           node-version: 16
 
