modified:   .github/workflows/pipeline.yaml 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js"
+    "run": "node index.js",
+    "test": "node test.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HassanAbbas10/devops.git"
