--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,23 +1,24 @@
 name: CI Pipeline
 
 on: 
- push:
-  branches: [main]
+  push:
+    branches: [main]
 
 jobs: 
- build:
-  runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-  steps: 
-  - name: Checkout code
-    uses: actions/checkout@v5
-  - name: SetUp Node
-    uses: actions/setup-node@v3  
-    with: 
+    steps: 
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with: 
           node-version: 16
 
-  - name: Install Dependencies
-    run: npm install  
+      - name: Install dependencies
+        run: npm install  
 
-  - name: Run tests
-    run: npm test
+      - name: Run tests
+        run: npm test
